--- a/Assignment2-war/web/WEB-INF/web.xml
+++ b/Assignment2-war/web/WEB-INF/web.xml
@@ -21,4 +21,16 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <security-constraint>
+        <display-name>AdminConstraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>webresources</web-resource-name>
+            <description>Administation area</description>
+            <url-pattern>/faces/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description>Basic Constraint</description>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
