JUNIT testing implemented for appuser and sprite

--- a/Assignment2-ejb/nbproject/project.properties
+++ b/Assignment2-ejb/nbproject/project.properties
@@ -36,7 +36,9 @@ jar.compress=false
 jar.name=Assignment2-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
-    ${libs.javaee-api-8.0.classpath}
+    ${libs.javaee-api-8.0.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -74,4 +76,4 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
-test.src.dir=test
+test.Testing%20Packages.dir=Testing Packages
